# health-monitoring-iot

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
drivers/: CMakeLists.txt
include/: health_monitor.h  moving_common.h
src/: health_monitor.cc  main.cc  main.cpp
src/movement_detection/: being_hunt_by_a_cat.cc  falling.cc  hiking.cc  jumping.cc  moving_common.cc  running.cc  stationary.cc  stretching.cc  walking.cc
